# servicehisilicon

./: Makefile.am  README.md  configure.ac
locale/: Makefile.am  ServiceHisilicon.pot  es.po  updateallpo.sh
plugin/: Makefile.am  __init__.py  plugin.py
servicehisilicon/: Makefile.am  hisilicon.h  pythonmodule.cpp  servicehisilicon.cpp  servicehisilicon.h
